feat: documents encryption
